--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -96,6 +96,52 @@ p {
 	color: orange;
 	margin-left: 15px;
 }
+
+/*==============================================
+	AUTO COMPLETE
+	===========================================*/
+
+
+.ui-autocomplete {
+position: fixed;
+top: 100%;
+left: 0;
+z-index: 1051 !important;
+float: left;
+display: none;
+min-width: 160px;
+width: 160px;
+padding: 4px 0;
+margin: 2px 0 0 0;
+list-style: none;
+background-color: #ffffff;
+border-color: #ccc;
+border-color: rgba(0, 0, 0, 0.2);
+border-style: solid;
+border-width: 1px;
+-webkit-border-radius: 2px;
+-moz-border-radius: 2px;
+border-radius: 2px;
+-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+-webkit-background-clip: padding-box;
+-moz-background-clip: padding;
+background-clip: padding-box;
+}
+ 
+ .ui-menu-item > a.ui-corner-all {
+display: block;
+padding: 3px 15px;
+clear: both;
+font-weight: normal;
+line-height: 18px;
+color: #555555;
+white-space: nowrap;
+text-decoration: none;
+}	
+	
+
 /*==============================================
    DASHBOARD STYLES    
     =============================================*/
