--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -150,10 +150,10 @@ text-decoration: none;
 {
 font-size: 20px;
 color: #ffb503;
-position: relative;
+position: absolute;
 float: right;
-margin: -19px;
-right: 310px;
+margin: -48px;
+margin-left: 32px;
 }
 	
 
