--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,6 +17,17 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+#map-canvas{
+	height:100%;
+	width:100%;
+	padding: 0;
+	position: absolute !important;
+	top: 40px;
+	right: 0px;
+	bottom: 0px !important;
+	left: 0px !important;
+}
+
 .iconRemove {
 	background: url("../img/remove.png") no-repeat;
 	width: 28px;
@@ -25,7 +36,13 @@ body {
 	background-size: 27px;
 	position: relative;
 	cursor:pointer;
-	/* left: 0px; */
+}
+
+.icone-mapa{
+width: 40px;
+height: 40px;
+float: right;
+margin-top: -85px;
 }
 
 .iconEdit {
@@ -37,7 +54,7 @@ body {
 	float: right;
 	background-size: 27px;
 	position: relative;
-	/* left: 0px; */
+	bottom:100px;
 }
 
 .text-box {
