--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,10 +39,11 @@ body {
 }
 
 .icone-mapa{
-width: 40px;
-height: 40px;
+width: 42px;
+height: 32px;
 float: right;
-margin-top: -85px;
+margin-top: -6px;
+margin-right: 10px;
 }
 
 .iconEdit {
@@ -54,7 +55,6 @@ margin-top: -85px;
 	float: right;
 	background-size: 27px;
 	position: relative;
-	bottom:100px;
 }
 
 .text-box {
@@ -168,6 +168,24 @@ background-color: #E7E6E6;
 box-shadow: 0px 1px 4px rgb(127, 125, 125);
 }	
 
+p.conteudo-estab {
+margin-left: 17px;
+font-size: 17px;
+color: orange;
+}
+
+.titulos{
+color: #428bca;
+text-decoration: none;
+font-size:25px;
+}
+a.titulos{
+color: #428bca;
+text-decoration: none;
+font-size:25px;	
+font-weight: bold;
+}
+
 .panel.panel-default {
 margin-left: 15px;
 margin-top: 30px;
@@ -239,7 +257,7 @@ box-shadow: 0px 1px 5px rgb(138, 136, 136);
 
 .modal-aberto {
 overflow: hidden;
-height: 150px;
+height: 110px;
 transition: height 2s;
 box-shadow: 0px 1px 5px rgb(138, 136, 136);
 }
