--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -655,7 +655,21 @@ right: 115px;
 margin-top: -23px;
 color: red;
 }
-	
-	
+
+
+.modal-preco{
+position: relative;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #999;
+border: 1px solid rgba(0, 0, 0, .2);
+border-radius: 6px;
+outline: none;
+-webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+width: 60%;
+margin-left: 20%;
+}	
+
 
 
