--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -134,9 +134,9 @@ border-radius: 0px;
 
 }
 p {
-    font-size:14px;
-    line-height:25px;
-    padding-top:20px;
+font-size: 14px;
+line-height: 15px;
+padding-top: 15px;
 }
 
 #tituloLista
@@ -196,12 +196,14 @@ text-decoration: none;
 .panel-default > .panel-heading {
 background-color: #E7E6E6;
 box-shadow: 0px 1px 4px rgb(127, 125, 125);
+border-radius: 10px;
 }	
 
 p.conteudo-estab {
 margin-left: 17px;
 font-size: 17px;
 color: orange;
+margin-top: -5px;
 }
 
 .titulos{
@@ -219,11 +221,11 @@ font-weight: bold;
 .panel.panel-default {
 margin-left: 15px;
 margin-top: 30px;
+border-radius: 10px;
 }
 
 h2.estabelecimento-produtos-baratos {
 font-size: 20px;
-padding-left: 15px;
 color:orange;
 }
 
@@ -235,7 +237,7 @@ h2.preco {
 color: orange;
 font-size: 20px;
 float: right;
-margin-right: -165px;
+margin-right: -123px;
 margin-top: -28px;
 }
 
@@ -244,7 +246,7 @@ color: orange;
 font-size: 20px;
 float: right;
 margin-top: -29px;
-margin-right: 120px;
+margin-right: 75px;
 }
 
 .ajustes-oferta
@@ -254,7 +256,7 @@ color: blue;
 font-weight: bold;
 float: right;
 margin-top: -16px;
-margin-right: 120px;
+margin-right: 75px;
 }
 
 .ajustes-valor
@@ -263,18 +265,18 @@ font-size: 18px;
 color: rgb(255, 94, 0);
 font-weight: bold;
 float: right;
-margin-right: -142px;
+margin-right: -112px;
 margin-top: -16px;
 }
 	
 .ajustes-lista
 {
-	font-size: 20px;
-	color: #ffb503;
-	position: absolute;
-	float: right;
-	margin: -48px;
-	margin-left: 32px;
+font-size: 20px;
+color: #ffb503;
+position: absolute;
+float: right;
+margin: -32px;
+margin-left: 15px;
 }
 
 .modal-fechado
@@ -313,10 +315,11 @@ img.pesquisar-imagem
     background-color:#F8F8F8;
 
 }
-   .noti-box {
-min-height: 225px;
-padding: 20px;
-text-align:center;
+
+.noti-box {
+padding: 10px;
+text-align: center;
+height: 195px;
 }
 
     .noti-box .icon-box {
@@ -652,7 +655,7 @@ font-weight: bold;
 .preco-checkin {
 position: absolute;
 right: 115px;
-margin-top: -23px;
+margin-top: -15px;
 color: red;
 }
 
@@ -670,6 +673,12 @@ box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
 width: 60%;
 margin-left: 20%;
 }	
-
+ .informacao-modal{
+font-size: 15px;
+color: blue;
+font-weight: bold;
+margin-top: -39px;
+margin-left: 90px;
+}
 
 
