--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -426,10 +426,10 @@ margin-top: -38px;
 
 p.preco-item{
 float: right;
-font-size: 18px;
+font-size: 16px;
 color: rgb(255, 94, 0);
 font-weight: bold;
-margin-right: -37px;
+margin-right: -30px;
 margin-top: -37px;
 }
 
@@ -441,6 +441,56 @@ margin-right: 8px;
 color: blue;
 font-weight: bold;
 }
+
+@media screen and (max-width:470px){
+	p.estab-nome-item{
+		color: #428bca;
+		text-decoration: none;
+		font-size: 15px;
+		font-weight: bold;
+		margin-left: 18px;
+		margin-top: -34px;
+	}
+	
+	.seta-listar-itens{
+	    height: 20px;
+	    width: 20px;
+	    margin-left: -10px;
+	}
+}
+
+@media screen and (max-width:390px){
+	p.estab-nome-item{
+		color: #428bca;
+		text-decoration: none;
+		font-size: 15px;
+		font-weight: bold;
+		margin-left: 10px;
+		margin-top: -34px;
+	}
+	
+	p.qualificacao {
+	  font-size: 15px;
+	  margin-top: -20px;
+	  margin-left: 10px;
+	  color: blue;
+	  font-weight: bold;
+	  float: left;
+	}	
+	
+	p.preco-item {
+		float: left;
+		font-size: 15px;
+		color: rgb(255, 94, 0);
+		font-weight: bold;
+		margin-right: 5px;
+		margin-left: 10px;
+		margin-top: -20px;
+	}
+}
+
+
+
 /*========*/
 
  .icon-box-right {
@@ -736,6 +786,53 @@ position: absolute;
 right: 115px;
 margin-top: -15px;
 color: red;
+}
+
+.alerta-warning {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+}
+
+.alerta{
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+@media screen and (max-width:390px){
+	.preco-checkin {
+	  position: absolute;
+	  right: 45px;
+	  margin-top: 10px;
+	  color: red;
+	}
+	
+	input.checkbox {
+	  position: relative;
+	  right: 180px;
+	  margin-top: 5px;
+	  height: 25px;
+	  width: 390px;
+	}
+	
+	.total-checkin{
+	  margin-top: -15px;
+	}
+	
+	.alerta-warning {
+	  color: #8a6d3b;
+	  background-color: #fcf8e3;
+	  border-color: #faebcc;
+	}
+
+	.alerta{
+	  padding: 15px;
+	  margin-bottom: 20px;
+	  border: 1px solid transparent;
+	  border-radius: 4px;
+	}
 }
 
 
